--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
           planeta. Há relatos históricos que apontam para o fato de que os gatos
           eram considerados seres sagrados em diferentes culturas e até mesmo
           associados a figuras divinas. Isso poderia indicar que os gatos têm
-          uma origem muito mais mística do que se pensava anteriormente. 
-          
+          uma origem muito mais mística do que se pensava anteriormente.
+
           <br />
           <br />
 
@@ -136,5 +136,59 @@
         </p>
       </div>
     </main>
+    <aside class="wrapper">
+      <h2>Artigos relacionados</h2>
+
+      <ul>
+        <li>
+          <a href="#">
+            <img src="./assets/catsTwo.png" alt="">
+            <div>
+              <h3>Sábado preguiçoso</h3>
+              <p>Descubra atividades interessantes para fazer com seu pet durante os finais de semana.</p>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="./assets/catsThree.png" alt="">
+            <div>
+              <h3>Balaio de gatos</h3>
+              <p>Como evitar confusões entre seus gatíneos e acostumá-los desde filhotes.</p>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="./assets/catsFour.png" alt="">
+            <div>
+              <h3>Cartela de cores</h3>
+              <p>Seu gato é inverno intenso? Verão profundo? Descubra as cores que mais combinam com seu bichano.</p>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="./assets/catsFive.png" alt="">
+            <div>
+              <h3>Os gatos sentem frio?</h3>
+              <p>Preparem-se para a frente fria que vem para o país da melhor maneira possível.</p>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="./assets/catsSix.png" alt="">
+            <div>
+              <h3>Conheça o Moacir</h3>
+              <p>Moacir é o gatinho da semana do nosso blog. Venha conhecer sua história de superação.</p>
+            </div>
+          </a>
+        </li>
+      </ul>
+    </aside>
+    <footer>
+      <p>© 2023 - Rocketseat Explorer</p>
+    </footer>
   </body>
 </html>
